--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,13 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
+      %th { class: (if params[:order_by] == "title" then "hilite" end) }
+        %a { href: movies_path(:order_by => 'title'), :id => "title_header" } 
+          Movie Title
       %th Rating
-      %th Release Date
+      %th { class: (if params[:order_by] == "release_date" then "hilite" end)}
+        %a { href: movies_path(:order_by => 'release_date'), :id => "release_date_header" } 
+          Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
