--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,16 +1,19 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
 
+= form_tag movies_path, :id => "ratings_form", :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @selected_ratings.include?(rating), :id => "ratings_#{rating}"
+  = submit_tag 'Refresh', :id => "ratings_submit"
+
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th { class: (if params[:order_by] == "title" then "hilite" end) }
-        %a { href: movies_path(:order_by => 'title'), :id => "title_header" } 
-          Movie Title
+      %th{:class => (@order_by == 'title')&&'hilite'}= link_to 'Movie Title', movies_path(:order_by => 'title'), :id => "title_header"
       %th Rating
-      %th { class: (if params[:order_by] == "release_date" then "hilite" end)}
-        %a { href: movies_path(:order_by => 'release_date'), :id => "release_date_header" } 
-          Release Date
+      %th{:class => (@order_by == 'release_date')&&'hilite'}= link_to 'Release Date', movies_path(:order_by => 'release_date'), :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
